# ml

./: package-lock.json  pyproject.toml
Basics/: basics.py
Linear-Regression/: basics.py  multi-regr.py
Logistic-Regression/: logit.py  titanic_all.py  titanic_demo.py
NLP/: embed_projector.py  gensim_learn.py  lstm_learn.py  tf-idf.ipynb  tfidf.py  tfidf_num.py
Neural-Networks/: nn_test.py  nn_train.py
Sandbox/: customer_fill.py  dynamic_query.py  ml.js  pipeline.py  regex_query.py  vehicle_scratch.py
