[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["lutfi <lutfi@avantgardehealth.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"
scikit-learn = "^1.1.3"
plotly = "^5.11.0"
wooldridge = "^0.4.4"
statsmodels = "^0.13.5"
matplotlib = "^3.6.2"
nltk = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
